tests/parser/tests/cases/should_fail/empty_type_args/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:3
1 |   a<> := b + 2;
  |     ^ here
  = note: expected an expression, however received a `>`.
